[package]
name = "lc3-zkvm"
description = "C3 ZKVM is a virtual machine implementation based on the Little Computer 3 (LC3) architecture, enhanced with zero-knowledge proof capabilities."
version = "0.1.0"
edition = "2021"
authors = ["keroroxx520@gmail.com"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
